removed slf4j for log4j